Fixed the size of #current-repo and #next-repo on small screen

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -57,12 +57,27 @@ h3 {
     .container {
         width: 768px;
     }
+    
+    #readme-container > * {
+        width: 738px;
+    }
 }
 
 @media (max-width: 767px) {
     .container {
         width: 100%;
-        padding-left: 5px;
-        padding-right: 5px;
+        /*padding-left: 5px;
+        padding-right: 5px;*/
+    }
+    
+    #readme-container > * {
+        width: 100%;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    
+    .panel {
+        margin-left: 15px;
+        margin-right: 15px;
     }
 }
